# todoist

./: CMakeLists.txt  README.md  TROUBLESHOOTING.md
.github/workflows/: testing.yml
src/: main.cpp  task.cpp  task.hpp  task_cli.cpp  task_cli.hpp  task_manager.cpp  task_manager.hpp
tests/: add_test.cpp  task_test.cpp
